implement seat reservation and management features with admin controls